---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "!x && y"
---
Root@0..7
  InfixExpression@0..7
    UnaryExpression@0..3
      Bang@0..1 "!"
      VariableReference@1..3
        Identifier@1..2 "x"
        Whitespace@2..3 " "
    And@3..5 "&&"
    Whitespace@5..6 " "
    VariableReference@6..7
      Identifier@6..7 "y"
